Fixed: '[top nav] Home, Contact Us, and Jobseekers are also not aligned correctly in the rectangle. They should be center justified, but the left margin is measuring at 27px and the right is measuring at 19x.'

--- a/css/altres.css
+++ b/css/altres.css
@@ -262,9 +262,7 @@ h4 {
 	padding: 0 0.9em;
 }
 
-#tertiary-links ul.links li.last {
-	padding-right: 0;
-}
+
 
 
 /*
